--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,31 +4,21 @@
 	<title>prova</title>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
+          <script src="././public/js/core/ui.router.js"></script>
       	  <script src="././public/js/route.js"></script>
       	  <script src="././public/js/main.js"></script>
 	</head>
 <body ng-controller="mainController">
 
         <!-- HEADER AND NAVBAR -->
-        <header>
-            <nav class="navbar navbar-default">
-            <div class="container">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="/">Angular Routing Example</a>
-                </div>
-
-                <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-                </ul>
-            </div>
-            </nav>
-        </header>
+        <div class="viewWrap">
+             <div ui-view ng-controller="MyCtrl">
+             </div>
+        </div>
         <!-- MAIN CONTENT AND INJECTED VIEWS -->
         <div id="main">
 
-            <div ng-view>
+            <div ng-view autoscroll>
             <!-- angular templating -->
             <!-- this is where content will be injected -->            
             </div>
