--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -4,24 +4,33 @@
                 <div class="logo">
                 </div>
             <div class="searchbox">
-             <form ng-controller="searchProductHomeController">
+             <form>
              <input type="search" class="form-control" id="mainSearchBox" placeholder="Search"/>
-                 <button type="submit" id="submitButtonMain" class="idbutton" ng-click="searchProducts()"></button>
+                 <button type="submit" id="submitButtonMain" class="idbutton"></button>
             </form>
             </div>
             <div class="menu" ng-controller="mainController">
             <div class="nav-center">
                 <ul>
                     <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>
-                    <li><a class="down" href="#!/offers">Gaming</a>
+                    <li class="menu2"><a class="down" href="#!/">Gaming</a>
 	                    <ul>
-	                    	<li>Mouse</li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
 	                    </ul>
 	                </li>    
-                    <li><a class="down" href="#!/">Hardware</a></li>
+                    <li class="menu2"><a class="down" href="#!/">Hardware</a>
+                    	                    <ul>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    	<li><a href="#!/">Mouse</a></li>
+	                    </ul></li>
                     <li><a class="down3" href="#!/">Periferiche</a></li>
                     <li><a class="down2" href="#!/">Notebook & PC</a></li>
-                    <li><a class="down2" href="#!/">Monitor & PC</a></li>
+                    <li><a class="down2" href="#!/">Monitor & TV</a></li>
                     <li><a class="down" href="#!/">Software</a></li>
                 </ul>
             </div>
