menu (wip), footer (wip)

--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -2,3 +2,60 @@
 <div class="cont">
 <ng-fader></ng-fader>
 </div>
+
+<!-- Footer -->
+<footer class="footer">
+    <section class="w3-row">
+        <div class="w3-col l4 m4 s12">
+            <div>
+                <h4>Follow Us</h4>
+            <div>
+                <span>
+                        <picture><img height="60" width="60" src="././public/img/facebook.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/twitter.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/googleplus.png"></img></picture>
+                    </span>
+            </div>
+            </div>
+        </div>
+        <div class="w3-col l4 m4 s12">
+            <div>
+                <h4>Info utili</h4>
+                <ul>
+                    <li><a href="/about">Chi siamo</a></li>
+                    <li><a href="/condizioni">Condizioni di vendita</a></li>
+                    <li><a href="#">Programmi di affiliazione</a></li>
+                    <li><a href="#">Opinioni dei Clienti</a></li>
+                    <li><a href="#">Area stampa</a></li>
+                </ul>
+            </div>
+        </div>
+
+
+
+        <div class="w3-col l4 m4 s12">
+            <h4>Pagamenti</h4>
+            <div>
+                <span>
+                        <picture><img height="60" width="60" src="././public/img/paypal.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/master-card.png"></img></picture>
+                    </span>
+            </div>
+            <div>
+                <span>
+                        <picture><img height="60" width="60" src="././public/img/american-express.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/visa.png"></img></picture>
+                    </span>
+            </div>
+
+        </div>
+    </section>
+    <hr>
+    <section class="wrapper-footer w3-border-top">
+        <div class="w3-small pa-15">
+            <div class="">
+                <span>Ardito Cristina ©2017 - All rights reserved. </span>
+            </div>
+        </div>
+    </section>
+</footer>
