--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -14,15 +14,52 @@
                 <ul>
                     <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>
                     <li class="menu2"><a class="down" href="#!/">Gaming</a>
-	                    <ul>
-	                    	<li><a href="#!/">Mouse</a></li>
-	                    	<li><a href="#!/">Mouse</a></li>
-	                    	<li><a href="#!/">Mouse</a></li>
-	                    	<li><a href="#!/">Mouse</a></li>
-	                    </ul>
+            <ul class="dropdown_5columns"><!-- Begin 5 columns container -->      
+            
+            <div class="col_1">
+                <p class="black_box">Cpu</p>
+                <ul>
+                <li>AMD</li>
+                <li>Intel</li>
+                </ul>
+            </div>
+            
+            <div class="col_1">
+                <p>Phasellus vitae sapien ac leo mollis porta quis sit amet nisi. Mauris hendrerit, metus cursus accumsan tincidunt.</p>
+            </div>
+            
+            <div class="col_1">
+                <p class="italic">This is a sample of an italic text. Consequat scelerisque. Fusce sed lectus at arcu mollis accumsan at nec nisi porta quis sit amet.</p>
+            </div>
+            
+            <div class="col_1">
+                <p>Curabitur euismod gravida ante nec commodo. Nunc dolor nulla, semper in ultricies vitae, vulputate porttitor neque.</p>
+            </div>
+            
+            <div class="col_1">
+                <p class="strong">This is a sample of a bold text. Aliquam sodales nisi nec felis hendrerit ac eleifend lectus feugiat scelerisque.</p>
+            </div>
+        
+            <div class="col_5">
+                <h2>Here is some content with side images</h2>
+            </div>
+           
+            <div class="col_3">
+                <p>Maecenas eget eros lorem, nec pellentesque lacus. Aenean dui orci, rhoncus sit amet tristique eu, tristique sed odio. Praesent ut interdum elit. Sed in sem mauris. Aenean a commodo mi. Praesent augue lacus.<a href="#">Read more...</a></p>
+                <p>Aliquam elementum felis quis felis consequat scelerisque. Fusce sed lectus at arcu mollis accumsan at nec nisi. Aliquam pretium mollis fringilla. Nunc in leo urna, eget varius metus. Aliquam sodales nisi.<a href="#">Read more...</a></p>
+            
+            </div>
+            
+            <div class="col_2">
+            
+                <p class="black_box">This is a black box, you can use it to highligh some content. Sed sed lacus nulla, et lacinia risus. Phasellus vitae sapien ac leo mollis porta quis sit amet nisi. Mauris hendrerit, metus cursus accumsan tincidunt.Quisque vestibulum nisi non nunc blandit placerat. Mauris facilisis, risus ut lobortis posuere, diam lacus congue lorem, ut condimentum ligula est vel orci. Donec interdum lacus at velit varius gravida. Nulla ipsum risus.</p>
+            
+            </div>
+        
+        </ul><!-- End 5 columns container -->
 	                </li>    
                     <li class="menu2"><a class="down" href="#!/">Hardware</a>
-                    	                    <ul>
+                    	     <ul>
 	                    	<li><a href="#!/">Mouse</a></li>
 	                    	<li><a href="#!/">Mouse</a></li>
 	                    	<li><a href="#!/">Mouse</a></li>
