--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -2,38 +2,35 @@
 <div class="cont">
 <ng-fader></ng-fader>
 </div>
-
+<img style="margin-left: 40%;" src="././public/img/wip.png"></img>
 <!-- Footer -->
 <footer class="footer">
-    <section class="w3-row">
-        <div class="w3-col l4 m4 s12">
+    <section class="footerows">
+        <div class="firstrow">
             <div>
                 <h4>Follow Us</h4>
-            <div>
-                <span>
-                        <picture><img height="60" width="60" src="././public/img/facebook.png"></img></picture>
-                        <picture><img height="60" width="60" src="././public/img/twitter.png"></img></picture>
-                        <picture><img height="60" width="60" src="././public/img/googleplus.png"></img></picture>
+            	<div class="img">
+                	<span>
+                        <picture><img height="40" width="40" src="././public/img/facebook.png"></img></picture>
+                        <picture><img class="imginner" height="40" width="40" src="././public/img/twitter.png"></img></picture>
+                        <picture><img class="imginner" height="40" width="40" src="././public/img/googleplus.png"></img></picture>
                     </span>
-            </div>
+           		</div>
             </div>
         </div>
-        <div class="w3-col l4 m4 s12">
+        <div class="secondrow">
             <div>
-                <h4>Info utili</h4>
+                <h4>Informazioni</h4>
                 <ul>
-                    <li><a href="/about">Chi siamo</a></li>
-                    <li><a href="/condizioni">Condizioni di vendita</a></li>
-                    <li><a href="#">Programmi di affiliazione</a></li>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">Condizioni di vendita</a></li>
+                    <li><a href="#">Note legali e Termini di Garanzia</a></li>
                     <li><a href="#">Opinioni dei Clienti</a></li>
-                    <li><a href="#">Area stampa</a></li>
+                    <li><a href="#">Consegna</a></li>
                 </ul>
             </div>
         </div>
-
-
-
-        <div class="w3-col l4 m4 s12">
+        <div class="lastrow">
             <h4>Pagamenti</h4>
             <div>
                 <span>
@@ -51,11 +48,7 @@
         </div>
     </section>
     <hr>
-    <section class="wrapper-footer w3-border-top">
-        <div class="w3-small pa-15">
-            <div class="">
+        <div class="rights">
                 <span>Ardito Cristina ©2017 - All rights reserved. </span>
-            </div>
         </div>
-    </section>
 </footer>
