Menu (wip), login (wip)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,8 +187,7 @@
 .menu ul li:hover ul {
     visibility: visible;
 }
-
-.menu ul ul li a {
+/*.menu ul ul li a {
     background-color: #000;
     width: 100%;
     height: 100%;
@@ -201,7 +200,7 @@
 
 .menu ul ul li a:hover {
     background-color: #232f3e;
-}
+}*/
 
 .header .nav-right .usericon {
 	background: url("../img/icon/people.png") no-repeat;
@@ -287,19 +286,180 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 	visibility: visible;
 }
 
+.dropdown_5columns p {
+	font-weight: bold;
+}
+
 .col_1,
-.col_2,
-.col_3,
-.col_4,
-.col_5 {
+.col_11 {
 	display:inline;
 	float: left;
 	position: relative;
 	margin-left: 5px;
 	margin-right: 5px;
 }
+.col_2,
+.col_22,
+.col_3{
+    display:inline;
+	float: left;
+	position: relative;
+	margin-left: 5px;
+	margin-right: 5px;
+	margin-top: 15%;
+}
 .col_1 {width:130px;}
-.col_2 {width:270px;}
-.col_3 {width:410px;}
-.col_4 {width:550px;}
-.col_5 {width:690px;}
+.col_2 {width:130px;}
+.col_11{width: 195px;}
+.col_22{width: 195px;}
+.col_1_down {
+	margin-top: 5%;
+	text-align: left;
+}
+
+.col_1_down a{
+	cursor: pointer;
+	color: #FFF;
+    padding: 7% !important;
+    text-decoration: none;
+    display: block;
+}
+
+.col_1_down li {
+	width: 100%;
+}
+
+.col_1_down ul  {
+	margin-top: -20%;
+}
+
+.col_1_down ul li {
+	visibility: hidden;
+	margin-left: 100%;
+	margin-top: -10%;
+}
+
+.col_1_down ul li a{
+	margin-top: -10% !important;
+}
+
+.col_1_down ul:hover li {
+	visibility: visible;
+}
+
+.arrow {
+ 	background: url("../img/icon/arrowgold.png") 55px no-repeat;
+ 	background-size: 12%;
+}
+
+.arrow ul li {
+	z-index: 999;
+	background-color: black;
+	margin-top: 0%;
+	width: 90%;
+	border-right: 1px solid #777777;
+	border-left: 1px solid #777777;
+}
+
+.arrow ul li:first-child {
+	border-top: 1px solid #777777;
+}
+
+.arrow ul li:last-child {
+	border-bottom: 1px solid #777777;
+}
+
+.col_1_down_2 {
+	margin-top: 5%;
+	text-align: left;
+}
+
+.col_1_down_2 li {
+	width: 100%;
+}
+
+.col_1_down_2 ul  {
+	margin-top: -10%;
+}
+
+.col_1_down_2 ul li {
+	visibility: hidden;
+	margin-left: 85%;
+}
+
+
+.col_1_down_2 ul:hover li {
+	visibility: visible;
+}
+
+.col_1_down_2 a{
+	cursor: pointer;
+	color: #FFF;
+    padding: 0% !important;
+    text-decoration: none;
+    display: block;
+}
+
+.arrow_2 {
+ 	background: url("../img/icon/arrowgold.png") 110px no-repeat;
+ 	background-size: 7%;
+}
+
+.arrow_2 ul li {
+	z-index: 999;
+	background-color: black;
+	width: 70%;
+	border-right: 1px solid #777777;
+	border-left: 1px solid #777777;
+}
+
+.arrow_2 ul li:first-child {
+	border-top: 1px solid #777777;
+}
+
+.arrow_2 ul li:last-child {
+	border-bottom: 1px solid #777777;
+}
+
+.arrow_3 {
+ 	background: url("../img/icon/arrowgold.png") 125px no-repeat;
+ 	background-size: 7%;
+}
+
+.arrow_3 ul li {
+	z-index: 999;
+	background-color: black;
+	width: 70%;
+	border-right: 1px solid #777777;
+	border-left: 1px solid #777777;
+}
+
+.arrow_3 ul li:first-child {
+	border-top: 1px solid #777777;
+}
+
+.arrow_3 ul li:last-child {
+	border-bottom: 1px solid #777777;
+}
+
+.arrow_4 {
+ 	background: url("../img/icon/arrowgold.png") 75px no-repeat;
+ 	background-size: 8%;
+}
+
+.arrow_4 ul li {
+	z-index: 999;
+	background-color: black;
+	margin-top: 0%;
+	width: 90%;
+	border-right: 1px solid #777777;
+	border-left: 1px solid #777777;
+}
+
+.arrow_4 ul li:first-child {
+	border-top: 1px solid #777777;
+}
+
+.arrow_4 ul li:last-child {
+	border-bottom: 1px solid #777777;
+}
