--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,6 +16,7 @@
       <script src="././public/js/ngFader.js"></script>
       <script src="././public/js/route.js"></script>
       <script src="././public/js/main.js"></script>
+      <script src="././public/js/service/userService.js"></script>
       <script src="././public/js/login.js"></script>
 	</head>
 <body ng-controller="mainController">
