Inserito messaggio di errore credenziali

--- a/views/front-end/login.ejs
+++ b/views/front-end/login.ejs
@@ -3,6 +3,7 @@
 <div class = "cont">
 	<h1>Autenticazione</h1>
 	<hr>
+	 <div id = "error"></div>
 	<div class = "form">
 		<h3>Sei già registrato?</h3>
 		<hr>
@@ -28,5 +29,6 @@
   			 <div class="button">
 						<a href="#!/signup" class="fa fa-signup" title = "Registrati">Non sei ancora registrato?</a>
 			</div>
+
 	</div>	    
 </div>
