--- a/public/css/styleLogin.css
+++ b/public/css/styleLogin.css
@@ -60,3 +60,19 @@
 	font-family: 'Open Sans',sans-serif !important;
 	font-size: 13px;
 }
+
+.error {
+	background-color: #f3515c !important;
+	color: #fff;
+	background: url(../img/icon/xbutton.png) no-repeat;
+	background-position: left 10px top 5px;
+	background-size: 10%;
+	margin-top: 2%;
+	margin-left: 2%;
+	width: 10%;
+	padding: 5px;
+}
+
+.error a {
+	margin-left: 20%;
+}
