--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,7 @@
       <script src="././public/js/main.js"></script>
       <script src="././public/js/service/userService.js"></script>
       <script src="././public/js/login.js"></script>
+      <script src="././public/js/signup.js"></script>
 	</head>
 <body ng-controller="mainController">
 
