--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -1,8 +1,12 @@
 <link rel="stylesheet" href="././public/css/stylehome.css"/>
-<div class="cont">
-<ng-fader></ng-fader>
+<div class="slideshow">
+    <ng-fader></ng-fader>
 </div>
-<img style="margin-left: 40%;" src="././public/img/wip.png"></img>
+<div class="cont">
+<img src="././public/img/homepage/monitor.png"></img>
+<img style="margin-left: 55%;" src="././public/img/homepage/schedemadri.png"></img>
+<img src="././public/img/homepage/schedevideo.png"></img>
+</div>
 <!-- Footer -->
 <footer class="footer">
     <section class="footerows">
