--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -1,6 +1,6 @@
 /* ------ Slideshow ------- */
-.cont .ng-fader {
-        background-color: #fff;
+.slideshow .ng-fader {
+        background-color: #000;
         position: relative;
         width: 100%;
         height: 50%;
@@ -221,6 +221,9 @@
     }
 }
 
+.cont {
+    background-color: #000;
+}
 /***************************************************
      Footer
 ***************************************************/
