Fix sign up, effettua redirect home da loggato

--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -4,14 +4,15 @@
 </div>
 <div class="cont">
 <img style="margin-left: 55%;" src="././public/img/homepage/monitor.png"></img>
-<img src="././public/img/homepage/schedemadri.png"></img>
-<img style="margin-left: 55%;" src="././public/img/homepage/schedevideo.png"></img>
-<img src="././public/img/homepage/mouse&tastiere.png"></img>
-<img src="././public/img/homepage/ram.png"></img>
 <img src="././public/img/homepage/cpu.png"></img>
+<img src="././public/img/homepage/ram.png"></img>
 <img src="././public/img/homepage/case.png"></img>
+<img src="././public/img/homepage/schedemadri.png"></img><br>
+<img src="././public/img/homepage/mouse&tastiere.png"></img>
 <img src="././public/img/homepage/ssd.png"></img>
 <img src="././public/img/homepage/speakers.png"></img>
+<img style="margin-left: 55%;" src="././public/img/homepage/schedevideo.png"></img>
+
 </div>
 <!-- Footer -->
 <footer class="footer">
@@ -59,6 +60,6 @@
     </section>
     <hr>
         <div class="rights">
-                <span>Ardito Cristina ©2017 - All rights reserved. </span>
+                <span>Ardito Cristina ©2018 - All rights reserved. </span>
         </div>
 </footer>
