File upload (wip)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
       <script src="././public/js/service/userService.js"></script>
       <script src="././public/js/service/dataHandler.js"></script>
       <script src="././public/js/service/productService.js"></script>
+      <script src="././public/js/service/fileUpload.js"></script>
       <script src="././public/js/login.js"></script>
       <script src="././public/js/signup.js"></script>
 	</head>
