--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
       <script src="././public/js/service/fileUpload.js"></script>
       <script src="././public/js/login.js"></script>
       <script src="././public/js/signup.js"></script>
+      <script src="././public/js/product.js"></script>
 	</head>
 <body ng-controller="mainController">
 
