Inseriti i cookies, mantiene l'utente loggato dopo il refresh della pagina Sistemato menù utente/admin loggato

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,12 @@
    <link rel="shortcut icon" type="image/x-icon" href="././public/img/icon/favicon.png" />
 
    <!-- load angular and angular route via CDN -->
+
 	    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
       <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-animate.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-touch.min.js"></script>
+      <script src="//code.angularjs.org/1.4.0/angular-cookies.js"></script>
       <script src="././public/js/core/ui.router.js"></script>
       <script src="././public/js/ngFader.js"></script>
       <script src="././public/js/route.js"></script>
