--- a/views/indexLoginAdmin.ejs
+++ b/views/indexLoginAdmin.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="././public/css/style.css"/>
+<link rel="stylesheet" href="././public/css/styleLogged.css"/>
 <header>           
             <div class="header">
                 <div class="logo">
@@ -142,15 +142,20 @@
                     <li><a class="down2" href="#!/">Notebook & PC</a></li>
                     <li><a class="down2" href="#!/">Monitor & TV</a></li>
                     <li><a class="down" href="#!/">Software</a></li>
-                    <li><a class="dash" ui-sref="dashboard">Magazzino</a></li>
                 </ul>
             </div>
             <div class="nav-right">   
-                    <div class="usericon"></div><a class="userText" href="#!/login">Account</a>
+                    <div class="usericon"></div>
+                    <ul><li><a class="userText" href="#!/login">Account</a>
+                    <ul>
+                    <li><a href="#!/useraccount">Profilo</a></li><br><br>
+                    <li><a href="#!/" ng-click="logout()">Logout</a></li>
+                    </ul></li>
+                    </ul>
             </div>
             </div>
             <div class="shopCar">
-                <div class="shopicon"></div><a href="#!/cart" class="shopText">Carrello</a>
+                <a ui-sref="dashboard" class="shopText">Magazzino</a>
             </div>
             </div>
             
