Fix menù magazzino

--- a/views/back-end/werehouse.ejs
+++ b/views/back-end/werehouse.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="././public/css/style.css"/>
+<link rel="stylesheet" href="././public/css/styleWerehouse.css"/>
 <div class="pageHeader"  ng-init="resetData()" ng-controller="dashController">
 <a ui-sref="dashboard"></a>
 </div>
@@ -18,17 +18,16 @@
             <div class="nav-center">
                 <ul>
                     <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>
-                    <li class="menu2"><a class="down" href="#!/">Aggiungi prodotto</a>
-                    </li>    
-                    <li class="menu2"><a class="down" href="#!/">Hardware</a>
-                                <ul class="dropdown_5columns"><!-- Begin 5 columns container -->      
+                    <li class="menu2"><a  href="#!/">Aggiungi prodotto</a></li>    
+                   <!-- <li class="menu2"><a  href="#!/"></a>
+                    <ul class="dropdown_5columns">  
         
         
-        </ul><!-- End 5 columns container --></li>
+                    </ul></li>
                     <li><a class="down3" href="#!/"></a></li>
                     <li><a class="down2" href="#!/"></a></li>
                     <li><a class="down2" href="#!/"></a></li>
-                    <li><a class="down" href="#!/"></a></li>
+                    <li><a class="down" href="#!/"></a></li>-->
                 </ul>
             </div>
             </div>
