--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,6 +25,7 @@
       <script src="././public/js/service/productService.js"></script>
       <script src="././public/js/service/fileUpload.js"></script>
       <script src="././public/js/product.js"></script>
+      <script src="././public/js/dash.js"></script>
 	</head>
 <body ng-controller="mainController">
 
