--- a/views/back-end/addProduct.ejs
+++ b/views/back-end/addProduct.ejs
@@ -36,7 +36,9 @@
         <span>Nome prodotto: </span><input type="text" id="name"></input><br>
         <span>Categoria prodotto: </span>
         <select id="selectionForm">
-                <option value="Hardware">Hardware</option>
+                <option value="Motherboard">Schede Madri</option>
+                <option value="Cpu">Cpu</option>
+                <option value="Videocard">Schede Video</option>
                 <option value="Software">Software</option>
                 <option value="Pc-Workstation">Pc-Workstation</option>
                 <option value="Pc-preconfigurati">Pc-preconfigurati</option>
