Implementata la visualizzazione di un singolo prodotto, necessaria ricerca per ottenere l'indice corretto del prodotto da visualizzare (wip)

--- a/views/front-end/signup.ejs
+++ b/views/front-end/signup.ejs
@@ -42,3 +42,52 @@
 
 	</div>	    
 </div>
+<!-- Footer -->
+<footer class="footer">
+    <section class="footerows">
+        <div class="firstrow">
+            <div>
+                <h4>Follow Us</h4>
+            	<div class="img">
+                	<span>
+                        <picture><img height="40" width="40" src="././public/img/facebook.png"></img></picture>
+                        <picture><img class="imginner" height="40" width="40" src="././public/img/twitter.png"></img></picture>
+                        <picture><img class="imginner" height="40" width="40" src="././public/img/googleplus.png"></img></picture>
+                    </span>
+           		</div>
+            </div>
+        </div>
+        <div class="secondrow">
+            <div>
+                <h4>Informazioni</h4>
+                <ul>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">Condizioni di vendita</a></li>
+                    <li><a href="#">Note legali e Termini di Garanzia</a></li>
+                    <li><a href="#">Opinioni dei Clienti</a></li>
+                    <li><a href="#">Consegna</a></li>
+                </ul>
+            </div>
+        </div>
+        <div class="lastrow">
+            <h4>Pagamenti</h4>
+            <div>
+                <span>
+                        <picture><img height="60" width="60" src="././public/img/paypal.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/master-card.png"></img></picture>
+                    </span>
+            </div>
+            <div>
+                <span>
+                        <picture><img height="60" width="60" src="././public/img/american-express.png"></img></picture>
+                        <picture><img height="60" width="60" src="././public/img/visa.png"></img></picture>
+                    </span>
+            </div>
+
+        </div>
+    </section>
+    <hr>
+        <div class="rights">
+                <span>Ardito Cristina ©2018 - All rights reserved. </span>
+        </div>
+</footer>
