--- a/public/css/styleSignUp.css
+++ b/public/css/styleSignUp.css
@@ -75,3 +75,70 @@
 .error a {
 	margin-left: 20%;
 }
+
+/***************************************************
+     Footer
+***************************************************/
+.footer {
+    background-color: #161616;
+    color: #fff;
+    margin-top: 30%;
+}
+
+.footer h4 {
+    color: rgb(254,231,154);
+    text-transform: uppercase;
+}
+
+.firstrow {
+    float: left;
+    margin-left: 5%;
+    text-align: center;
+    width: 20%;
+}
+
+
+.firstrow .img {
+    text-align: center;
+    margin-top: 5%;
+}
+
+.firstrow .imginner {
+    margin-left: 4%;
+}
+
+.firstrow .img img:hover {
+     -webkit-filter: drop-shadow(1px 1px 1px #fff);
+     filter: drop-shadow(1px 1px 1px #fff); 
+}
+
+.secondrow {
+    float: left;
+    margin-left: 20%;
+    text-align: center;
+}
+
+.secondrow li {
+    list-style: none;
+    text-align: center;
+}
+
+.secondrow li:first-child {
+    margin-top: 2%;
+}
+.secondrow a {
+    text-decoration: none;
+    color: #fff
+}
+
+.secondrow a:hover {
+        text-shadow: 0px 0px 1px #FFF;
+}
+
+.lastrow {
+    margin-left: 70%;
+    text-align: center;
+}
+.rights {
+    text-align: center;
+}
