--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -264,7 +264,7 @@
 
 .videocard {
     position: relative;
-    margin-left: 50%;
+    margin-left: 55%;
 }
 
 .vetrinavideocard {
@@ -317,7 +317,7 @@
 }
 
 .product .prezzo{
-  color: #3476B6;
+  color: rgb(254,231,154) ;
   font-size: 1.3em;
   margin-top: -1%;
 }
