--- a/public/css/styleSingleProduct.css
+++ b/public/css/styleSingleProduct.css
@@ -69,9 +69,24 @@
 }
 
 .prezzoprod {
+    color: #64DD17;
     position: relative;
     margin-left: 47%;
     margin-top: -1.1%;
+}
+
+.tasse {
+    color: Black !important;
+    font-size: 12px;
+    position: relative;
+    margin-left: 1%;
+    margin-top: -1.1%;
+}
+
+.qtaprod {
+       position: relative;
+    margin-left: 47%;
+    margin-top: -1.1%; 
 }
 
 .addtitolo {
@@ -141,6 +156,45 @@ button:hover {
     margin-top: 3%;
     height: 20px;
     width: 20px;
+}
+
+.pagamenti {
+    margin-top: 1.5%;
+    margin-left: 40%;
+}
+
+.pagamenti h4{
+    font-size: 15px;
+   color: #01579B;
+}
+
+.pagamenti .picture {
+    margin-top: 1%;
+}
+
+.pagamenti picture {
+    float: left;
+    margin-left: 0.5%;
+}
+
+.pagamenti picture:first-child{
+    margin-left: 0%;
+}
+
+.freedelivery {
+    background: url("../img/icon/truck.png") no-repeat;
+    margin-top: 5%;
+    margin-left: 40%;
+    width: 500px;
+    height: 30px;
+    font-size: 13px;
+    color: #777777;
+}
+
+.freedelivery span {
+    position: relative;
+    top: 10px;
+    margin-left: 8%;
 }
 
 /***************************************************
