--- a/views/indexLogout.ejs
+++ b/views/indexLogout.ejs
@@ -13,11 +13,9 @@
             <div class="nav-center">
                 <ul>
                     <li class="home"><a href="#!/"><div class="homeicon"></div></a></li>
-                    <li class="menu2"><a class="down" href="#!/">Gaming</a>
-	                </li>    
+                    <li class="menu2"><a class="down" href="#!/">Gaming</a></li>    
                     <li class="menu2"><a class="down" href="#!/">Hardware</a>
-                                <ul class="dropdown_5columns"><!-- Begin 5 columns container -->      
-            
+             <ul class="dropdown_5columns"><!-- Begin 5 columns container -->             
             <div class="col_1">
                 <p>Cpu</p>
                 <hr>
@@ -142,7 +140,17 @@
                     <li><a class="down2" href="#!/">Notebook & PC</a></li>
                     <li><a class="down2" href="#!/">Monitor & TV</a></li>
                     <li><a class="down" href="#!/">Software</a></li>
+                    <li class="menuhidden"><a>Menu</a>
+                    
+                    <a href="#!/">Gaming</a>
+                    <a href="#!/">Hardware</a>
+                    <a href="#!/">Periferiche</a>
+                    <a href="#!/">Notebook</a>
+                    <a href="#!/">Monitor</a>
+                    <a href="#!/">Software</a>
+                    </li>
                 </ul>
+
             </div>
             <div class="nav-right">   
                     <div class="usericon"></div><a class="userText" href="#!/login">Accedi</a>
