--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,9 +124,6 @@
 	width: 50px;
 }
 
-.menu .menuhidden {
-    visibility: hidden;
-}
 .menu ul ul {
     position: absolute;
     top: 80%;
@@ -469,7 +466,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', end
 }
 
 
-@media screen and (max-width: 800px) {
+@media only screen and (max-width: 1100px) {
 
     .header .logo {
         background: url("../img/logo.png") 20px no-repeat;
