Iniziata gestione categorie

--- a/public/css/stylehome.css
+++ b/public/css/stylehome.css
@@ -335,6 +335,7 @@
 .monitor {
     float: left;
     margin-left: 10%;
+    cursor: pointer;
 }
 
 /***************************************************
