Implementata visualizzazione prodotti per categorie

--- a/views/front-end/home.ejs
+++ b/views/front-end/home.ejs
@@ -21,7 +21,7 @@
     <a href='#!/categ'><img ng-click="initCategory('Ssd')" src="././public/img/homepage/ssd.png"></img></a>
     <a href='#!/categ'><img ng-click="initCategory('Speakers')" src="././public/img/homepage/speakers.png"></img></a>
     <div class="contvideocards">
-        <a href='#!/categ'><img class="videocard" src="././public/img/homepage/schedevideo2.png"></img></a>
+        <a href='#!/categ'><img class="videocard" ng-click="initCategory('Videocard')" src="././public/img/homepage/schedevideo2.png"></img></a>
         <section class="vetrinavideocard" id="videocard" ng-init="showVideoCards(4)" ng-controller="productsController">
         </section>
     </div>    
