--- a/public/css/styleCategorie.css
+++ b/public/css/styleCategorie.css
@@ -153,22 +153,71 @@
   color: #42a5f5;
 }
 
-/* ------ FOOTER ------- */   
+/***************************************************
+     Footer
+***************************************************/
 .footer {
-    position: relative;
-    background-color: #232f3e;
-    width: 100%;
-    height: 10%;
-    margin-top: 60%;
-    color: #FFF;
-    text-align: center;
-    border-top: 2px solid #ccc;
-    border-bottom: 2px solid #ccc;
-    margin-bottom: 5px;
+    background-color: #161616;
+    color: #fff;
+    margin-top: 30%;
 }
 
-.titlefooter {
-    font-size: 1.2em;
+.footer h4 {
+    color: rgb(254,231,154);
+    text-transform: uppercase;
+}
+
+.firstrow {
+    float: left;
+    margin-left: 5%;
+    text-align: center;
+    width: 20%;
+}
+
+
+.firstrow .img {
+    text-align: center;
+    margin-top: 5%;
+}
+
+.firstrow .imginner {
+    margin-left: 4%;
+}
+
+.firstrow .img img:hover {
+     -webkit-filter: drop-shadow(1px 1px 1px #fff);
+     filter: drop-shadow(1px 1px 1px #fff); 
+}
+
+.secondrow {
+    float: left;
+    margin-left: 20%;
+    text-align: center;
+}
+
+.secondrow li {
+    list-style: none;
+    text-align: center;
+}
+
+.secondrow li:first-child {
+    margin-top: 2%;
+}
+.secondrow a {
+    text-decoration: none;
+    color: #fff
+}
+
+.secondrow a:hover {
+        text-shadow: 0px 0px 1px #FFF;
+}
+
+.lastrow {
+    margin-left: 70%;
+    text-align: center;
+}
+.rights {
+    text-align: center;
 }
 
 @media only screen and (min-width: 320px) and (max-width: 1000px){ 
